edit payment time
